Added validation to competitor form

--- a/app/assets/javascripts/app/templates/competitor_form.jst.ejs
+++ b/app/assets/javascripts/app/templates/competitor_form.jst.ejs
@@ -11,7 +11,7 @@
                     Close
                 </span>
             </button>
-	    <h4 class='modal-title'><%= title %></h4>
+            <h4 class='modal-title'><%= title %></h4>
         </div>
 
         <div class='modal-body'>
@@ -20,35 +20,35 @@
                     <%= I18n.t('events.show.profile')+ ':' %>
                 </span>
                 <div class='col-sm-9'>
-		    <select class='form-control competitor-profile' name='competitor[user_profile_id]' />
-                    <input class='form-control' name='competitor[name]' />
+                    <select class='form-control competitor-profile pilot-group' name='competitor[user_profile_id]' />
+                    <input class='form-control pilot-group' name='competitor[name]' />
                 </div>
-		<div class='col-sm-9 col-sm-offset-3'>
-		    <span>
-			<span class='toggle-profile-caption'>
-			    <%= I18n.t('events.show.profile_caption') %>
-			</span>
-			<a class='toggle-profile' href='#'>
-			    <%= I18n.t('events.show.toggle_profile') %>
-			</a>
-		    </span>
+                <div class='col-sm-9 col-sm-offset-3'>
+                    <span>
+                        <span class='toggle-profile-caption'>
+                            <%= I18n.t('events.show.profile_caption') %>
+                        </span>
+                        <a class='toggle-profile' href='#'>
+                            <%= I18n.t('events.show.toggle_profile') %>
+                        </a>
+                    </span>
                 </div>
             </div>
             <div class='form-group'>
-		<span class='col-sm-3 control-label'>
-		    <%= I18n.t('events.show.suit') %>
-	        </span>
-		<div class='col-sm-9'>
-		    <select class='form-control' name='competitor[wingsuit_id]' />
-		</div>
+                <span class='col-sm-3 control-label'>
+                    <%= I18n.t('events.show.suit') %>
+                </span>
+                <div class='col-sm-9'>
+                    <select class='form-control' name='competitor[wingsuit_id]' />
+                </div>
             </div>
             <div class='form-group'>
-		<span class='col-sm-3 control-label'>
-		    <%= I18n.t('events.show.section') %>
-	        </span>
-		<div class='col-sm-9'>
-		    <select class='form-control' name='competitor[section_id]' />
-		</div>
+                <span class='col-sm-3 control-label'>
+                    <%= I18n.t('events.show.section') %>
+                </span>
+                <div class='col-sm-9'>
+                    <select class='form-control' name='competitor[section_id]' />
+                </div>
             </div>
         </div>
 
