Fix error - place was not set from new event form

--- a/app/views/events/_new_event_modal.html.haml
+++ b/app/views/events/_new_event_modal.html.haml
@@ -33,7 +33,7 @@
           .form-group
             %span.col-sm-4.control-label= t('activerecord.attributes.event.place')
             .col-sm-8
-              %select.form-control#event-place{name: 'place_id'}
+              %select.form-control#event-place{name: 'event[place_id]'}
 
           .form-group
             %span.col-sm-4.control-label
