--- a/app/views/places/_form.html.haml
+++ b/app/views/places/_form.html.haml
@@ -7,7 +7,7 @@
   .form-group
     = f.label :country, class: 'col-sm-2 control-label', for: :country
     .col-sm-5
-      = f.collection_select(:country_id, Country.all, :id, :name, {promt: 'Select country'}, {class: 'form-control'})
+      = f.collection_select(:country_id, Country.order(:name), :id, :name, {promt: 'Select country'}, {class: 'form-control'})
 
   .form-group
     = f.label :latitude, class: 'col-sm-2 control-label', for: :latitude
