--- a/app/views/places/_form.html.haml
+++ b/app/views/places/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @place, html: {class: 'form-horizontal'} do |f|
+= form_for @place, html: {class: 'form-horizontal place-form'} do |f|
   .form-group
     = f.label :name, class: 'col-sm-2 control-label', for: :name
     .col-sm-5
