--- a/app/views/places/new.html.haml
+++ b/app/views/places/new.html.haml
@@ -1,6 +1,6 @@
-.container.top-buffer
+.container
   .page-header
     %h2
-      = 'Place: Create'
+      = t('activerecord.models.place')
 
 = render 'form'
