--- a/app/assets/javascripts/app/templates/new_result_form.jst.ejs
+++ b/app/assets/javascripts/app/templates/new_result_form.jst.ejs
@@ -25,11 +25,11 @@
                         <span class='input-group-btn'>
                             <span class='btn btn-default btn-file'>
                                 Browse&hellip;
-                                <input name='event_track[track_file]' type='file' />
+                                <input class='result-track-group' name='event_track[track_file]' type='file' />
                             </span>
                         </span>
                     </div>
-                    <select name='event_track[track_id]' class='form-control result-track' />
+                    <select name='event_track[track_id]' class='form-control result-track result-track-group' />
                     <div class='col-sm-9.col-sm-offset-3'>
                         <span>
                             <span class='toggle-track-caption'>
