--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -3,53 +3,35 @@
   .page-header
     %h1=t '.title'
   .row
-    .col-sm-12
+    .col-sm-3
       %strong Explore:
       %a.btn.btn-default{href: wingsuits_path} wingsuits
-      %a.btn.btn-default{href: places_path} locations
+    .col-sm-9
+      .pull-right
+        .btn-group
+          - kind = nil || (params[:query][:kind] if params[:query])
+          %a.btn.btn-default{href: tracks_path, class: ('active' unless kind)}
+            = t '.all'
+          %a.btn.btn-default{href: tracks_path(query: {kind: :skydive}), class: ('active' if kind == 'skydive')} 
+            Skydive
+          %a.btn.btn-default{href: tracks_path(query: {kind: :base}), class: ('active' if kind == 'base')}
+            B.A.S.E
   .row
-    -# - kind = :all
-    -# - if params[:filter] && params[:filter][:kind]
-    -#   - kind = :skydive if params[:filter][:kind] == 'skydive'
-    -#   - kind = :base if params[:filter][:kind] == 'base'
-    -# .form-group
-    -#   .btn-group.btn-group-sm{data: {toggle: 'buttons'}}
-    -#     %label.btn.btn-default{class: ('active' if kind == :all)}
-    -#       %input#tracks-all{type: 'radio', 
-    -#                         name: 'filter[kind]', 
-    -#                         value: 'all', 
-    -#                         autocomplete: 'off',
-    -#                         checked: kind == :all}
-    -#       = 'All'
-    -#     %label.btn.btn-default{class: ('active' if kind == :skydive)}
-    -#       %input#tracks-skydive{type: 'radio', 
-    -#                             name: 'filter[kind]', 
-    -#                             value: 'skydive', 
-    -#                             autocomplete: 'off',
-    -#                             checked: kind == :skydive}
-    -#       = 'Skydive'
-    -#     %label.btn.btn-default{class: ('active' if kind == :base)}
-    -#       %input#tracks-base{type: 'radio', 
-    -#                         name: 'filter[kind]', 
-    -#                         value: 'base', 
-    -#                         autocomplete: 'off'}
-    -#       = 'B.A.S.E.'
-
-  -# .col-md-9.col-lg-9
-  %table#tracks-index.table.table-hover
-    %thead
-      %tr
-        %th=t 'activerecord.attributes.track.id'
-        %th=t 'activerecord.attributes.track.name'
-        %th=t 'activerecord.attributes.track.suit'
-        %th=t 'activerecord.attributes.track.place'
-        %th=t 'activerecord.attributes.track.comment'
-        %th=t 'disciplines.distance'
-        %th=t 'disciplines.speed'
-        %th=t 'disciplines.time'
-        %th=t 'activerecord.attributes.track.uploaded_at'
-        %th
-    %tbody
-      = render @tracks
+    .col-sm-12.top-buffer
+      %table#tracks-index.table.table-hover
+        %thead
+          %tr
+            %th=t 'activerecord.attributes.track.id'
+            %th=t 'activerecord.attributes.track.name'
+            %th=t 'activerecord.attributes.track.suit'
+            %th=t 'activerecord.attributes.track.place'
+            %th=t 'activerecord.attributes.track.comment'
+            %th=t 'disciplines.distance'
+            %th=t 'disciplines.speed'
+            %th=t 'disciplines.time'
+            %th=t 'activerecord.attributes.track.uploaded_at'
+            %th
+        %tbody
+          = render @tracks
 
   = will_paginate @tracks, renderer: BootstrapPagination::Rails
