--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -29,7 +29,7 @@
             %th=t 'disciplines.distance'
             %th=t 'disciplines.speed'
             %th=t 'disciplines.time'
-            %th=t 'activerecord.attributes.track.uploaded_at'
+            %th=t 'activerecord.attributes.track.recorded_at'
             %th
         %tbody
           = render @tracks
