--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -35,7 +35,7 @@
         %th.text-right= t('disciplinse.speed')
         %th.text-right= t('disciplinse.time')
         %th=t 'activerecord.attributes.track.comment'
-        %th.text-center=t 'activerecord.attributes.track.uploaded_at'
+        %th.text-center=t 'activerecord.attributes.track.recorded_at'
         %th
     %tbody
       - @place.tracks.accessible_by(current_user).each do |track|
