--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -67,7 +67,7 @@
             %th.text-right= t('disciplinse.speed')
             %th.text-right= t('disciplinse.time')
             %th= t('activerecord.attributes.track.comment')
-            %th.text-right= t('activerecord.attributes.track.uploaded_at')
+            %th.text-right= t('activerecord.attributes.track.recorded_at')
             %th
         %tbody
           - groups = profile_tracks.group_by { |x| x.created_at.beginning_of_month }
@@ -99,7 +99,7 @@
                 %td.text-muted
                   .comment-cell= track.comment
                 %td.text-info.text-right
-                  = l(track.created_at, 
+                  = l(track.recorded_at, 
                       format: '%-d %b %Y', 
                       locale: params[:locale])
                 %td= track_icons(track)
