Add location to worldwide competitions

--- a/app/views/virtual_competitions/show.html.haml
+++ b/app/views/virtual_competitions/show.html.haml
@@ -27,6 +27,7 @@
   - columns_count = 7 
   - columns_count += 1 if @competition.display_highest_speed
   - columns_count += 1 if @competition.display_highest_gr
+  - columns_count += 1 if @competition.worldwide?
 
   - if best_results.count > 2
     .row.top-buffer-30
@@ -46,6 +47,8 @@
             %th= '#'
             %th=t 'activerecord.attributes.track.name'
             %th=t 'activerecord.attributes.track.suit'
+            - if @competition.worldwide?
+              %th= t 'activerecord.attributes.track.place'
             %th.text-right= 'Result'
             - if @competition.display_highest_speed
               %th.text-right= 'Best speed'
@@ -63,6 +66,8 @@
                 %a{href: user_profile_path(best_result.user_profile_id), data: {toggle: 'tooltip'}, title: t('.show_profile')}
                   = best_result.user_profile.name.titleize
               %td= suit_presentation(best_result.wingsuit)
+              - if @competition.worldwide?
+                %td= track_place(best_result.track)
               %td.text-right
                 %a{href: track_path(best_result.track_id), data: {toggle: 'tooltip'}, title: t('.show_details')}
                   = format_result(best_result.result, @competition)
@@ -83,6 +88,8 @@
                     - all_results.each do |comp_result|
                       %tr
                         %td= suit_presentation(comp_result.wingsuit)
+                        - if @competition.worldwide?
+                          %td= track_place(comp_result.track)
                         %td.text-right
                           %a.text-info{href: track_path(comp_result.track_id), data: {toggle: 'tooltip'}, title: t('.show_details')}
                             = format_result(comp_result.result, @competition)
