Added ability to sort tracks list by id and recorded_at

--- a/app/assets/stylesheets/tracks.css
+++ b/app/assets/stylesheets/tracks.css
@@ -177,3 +177,5 @@
     background-color: rgb(96, 0, 12);
     color: rgb(244, 244, 244);
 }
+
+#tracks-index tr > td:nth-child(1) { min-width: 55px; }
