--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -86,6 +86,20 @@
   margin-bottom: 0;
 }
 
+.navbar li.sign-in a {
+  padding-left: 0px;  
+}
+
+.navbar a.locale-dropdown {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-left-style: solid;
+  border-left-width: 1px;
+  border-left-color: @navbar-default-border; 
+}
+
 .navbar-fixed-top {
   -webkit-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.08);
   -moz-box-shadow:    0px 1px 2px 0px rgba(0,0,0,0.08);
